Refs #9 update .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,20 @@
-.git
-.gitignore
-.dockerignore
 Dockerfile.dev
 Dockerfile.prod
-.ruby-version
+.dockerignore
+
+.git
+.gitignore
+
 README.md
-log
-tmp
-.bundle
+
+.ruby-version
+
+/.bundle
+
+/log/*
+/tmp/*
+
+!/log/.keep
+!/tmp/.keep
+
+.byebug_history
