--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,15 +1,16 @@
 FROM ruby:2.5.0-alpine3.7
-RUN apk add --no-cache --update build-base \
-                                postgresql-dev \
-                                linux-headers \
-                                git \
-                                nodejs \
-                                bash
+
+RUN apk add --no-cache --update build-base postgresql-dev linux-headers nodejs
+
 ENV APP_PATH /usr/src/app
+
 WORKDIR $APP_PATH
+
+COPY . .
+
 RUN echo "gem: --no-document" > ~/.gemrc
-COPY Gemfile* ./
 RUN bundle install --jobs `expr $(cat /proc/cpuinfo | grep -c "cpu cores") - 1` --retry 3
-COPY . $APP_PATH
-EXPOSE 4000
+
 CMD ["bundle", "exec", "rails", "server", "-p", "4000", "-b", "0.0.0.0"]
+
+EXPOSE 4000
