--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM ruby:2.5.0-alpine3.7
 
-RUN apk add --no-cache --update build-base postgresql-dev linux-headers nodejs
+RUN apk add --no-cache --update build-base postgresql-dev linux-headers nodejs git
 
 ENV APP_PATH /usr/src/app
 
